=======
CHANGES
=======

0.9 (Unreleased)
----------------

- Fixed Chameleon 2.2 compatibility

- Added 'response_headers' to View class (list of headers)

- Added 'view.subpath' decorator for view methods.
  It's possible to call method as subpath of view,
  example: 
     /login.html - fullpage
     /login.html/validate - validate method only

- Added datetime and time delta fomatters

- Use simplejson instead of standard json for renderer

- Check if render method return Response object


0.8 (2011-07-08)
----------------

- Added missing 'zope.i18n' dependency

- Use __discriminator and __order (changes in memphis.config api)


0.7 (2011-06-20)
----------------

- Fix registerIn support


0.6 (2011-06-20)
----------------

- Added 'decorator' param to pyramidView


0.5 (2011-06-19)
----------------

- Added zope support

- Added 'decorator' param to registerZopeView


0.4 (2011-06-07)
----------------

- Added 'layout' decorator style layout registration.

- Use config.action in 'layout.registerLayout'

- Added 'path' API funcion, it tranforms related path
  to absolute.


0.3 (2011-06-03)
----------------

- Use config.action in 'view.registerView' and 'view.registerPage'

- Secure view if permission is supplied


0.2 (2011-05-30)
----------------

- If view's update method returns dict
  use this dict as locals for template.


0.1 (2011-05-27)
----------------

- Initial release